# rp2040-okdo-lidar

./: CMakeLists.txt  README.md  flash.sh  openocd.sh  reset.sh  usb_test.py
example/: CMakeLists.txt  main.c  tusb_config.h  usb.c  usb.h
include/: lidar.h
src/: CMakeLists.txt  crc8.c  crc8.h  lidar.c  lidar.h  main.c  tusb_config.h  usb.c  usb.h  usb_descriptors.h
tools/: usb_raw.py  visualise.py
